Fix period container spacing ;

--- a/index.css
+++ b/index.css
@@ -28,9 +28,14 @@ body {
     justify-content: center;
 }
 
+#home-container button, #guest-container button {
+    margin-top: 10px;
+}
+
 .vertical-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 15%;
     margin-top: 30px;
 }
@@ -80,7 +85,7 @@ body {
     color: #F94F6D;
     text-align: center;
     border-radius: 5px;
-    margin: 30px auto 0px auto;
+    margin: 12px auto 0px auto;
     padding: 15px 0px;
     line-height: 90px;
     font-size: 90px;
@@ -91,7 +96,8 @@ body {
 }
 
 #resetbutton {
-    width: 100px;
+    width: 100%;
+    margin: 20px auto;
 }
 
 .button {
